fix mis-centered title on smaller screens

--- a/src/components/game/duels/summary/teamSummary/teamSummary.css
+++ b/src/components/game/duels/summary/teamSummary/teamSummary.css
@@ -14,6 +14,7 @@
     color: var(--plonk-stars-white);
     font-size: 1.5rem;
     font-weight: bold;
+    text-align: center;
 }
 
 .duels-team-summary-overall-stats{
